--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "cluster": "^0.7.7",
     "express": "^4.15.2",
     "os": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-google": "^0.10.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
