--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-node-version": "^2.1.0",
     "cluster": "^0.7.7",
     "express": "^4.15.2",
+    "jquery": "^3.3.1",
     "os": "^0.1.1"
   },
   "devDependencies": {
