--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "nova-alfort-com-br",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Webapp da empresa nova alfort, empresa de transportes privados",
   "main": "./public/server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node src/index",
+    "dev": "nodemon src/index"
   },
   "author": "Pedro Azevedo",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "check-node-version": "^2.1.0",
     "cluster": "^0.7.7",
     "express": "^4.15.2",
     "jquery": "^3.3.1",
+    "nunjucks": "^3.2.0",
     "os": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-google": "^0.10.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
