--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "check-node-version": "^2.1.0",
     "cluster": "^0.7.7",
     "express": "^4.15.2",
+    "global": "^4.3.2",
     "jquery": "^3.3.1",
+    "nodemailer": "^6.2.1",
     "nunjucks": "^3.2.0",
     "os": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "nodemon": "^1.19.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^9.1.0",
